tests/lean/tco.lean.expected.out
hello tco
hello
hello
tco.lean:15:0: error: I failed
state:
⊢ true
ff
ff
?m_1
tco.lean:35:0: error: deep recursion was detected at 'expression replacer' (potential solution: increase stack space in your system)
tt
tco.lean:42:0: error: deep recursion was detected at 'expression replacer' (potential solution: increase stack space in your system)
tco.lean:50:0: error: deep recursion was detected at 'expression replacer' (potential solution: increase stack space in your system)
?x_2 * ?x_3 = ?x_4 → ?x_2 = ?x_4 * ?x_3⁻¹
[?7.0]
[?x_0, ?x_1, ?x_2, ?x_3, ?x_4]
ℕ
theorem my_intro_test : ∀ (x : ℕ), x = x :=
λ (x : ℕ), eq.refl x
?x_1 :: ?x_2
([], [3, [4, 5]])
tco.lean:169:0: error: failed to unify
state:
2 goals
⊢ true

⊢ Type ?
[]
[hi,there]
[hi]
